--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "bugs": {
     "url": "https://github.com/ricsam/tfinjs-cli/issues"
   },
-  "homepage": "https://github.com/ricsam/tfinjs-cli#readme",
-  "dependencies": {},
+  "homepage": "https://pedantic-sammet-e08804.netlify.com/",
+  "dependencies": {
+    "fs-extra": "^7.0.1"
+  },
   "peerDependencies": {
-    "tfinjs": "^0.0.2"
+    "tfinjs": "^0.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
@@ -45,6 +47,7 @@
     "jsdoc": "^3.5.5",
     "minami": "^1.2.3",
     "prettier": "^1.15.1",
+    "tfinjs": "^0.0.5",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
     "webpack-node-externals": "^1.7.2"
